// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hero Home Section renders hero for Fringe Events page correctly 1`] = `
<section
  class="relative z-10 overflow-hidden flex items-center py-[6.25rem] md:py-[8.75rem] xl:py-[11.25rem] min-h-[480px]  md:min-h-[600px] lg:min-h-[700px] xl:min-h-[100vh]  text-white bg-primaryLightGradient"
  data-testid="hero-home"
>
  <video
    class="absolute z-[-1]  inset-0  w-full h-full object-cover"
    loop=""
    preload="none"
  >
    <source
      src="https://brightonseo.com/wp-content/themes/brighton-seo/assets/images/bseo-into-video-longer-intro.mp4"
      type="video/mp4"
    />
  </video>
  <span
    class="hero-overlay absolute inset-0 z-[1]"
  />
  <div
    class="container"
  >
    <div
      class="xl:max-w-[1145px] mx-auto md:text-center"
    >
      <div
        class="relative z-50"
      >
        <h1
          class="text-[2rem] leading-[1.2] font-semibold text-white md:text-[3rem] lg:text-[5rem] lg:font-bold"
        >
          Fringe events
        </h1>
        <div
          class="mt-4"
        >
          <div
            class="inline-flex items-center flex-wrap gap-[.5rem_2.5rem]"
          >
            <div
              class="event-info-item"
            >
              <div
                class="event-info-icon text-[1.25rem] lg:text-[2rem]"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M17 3h4a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h4V1h2v2h6V1h2v2zM4 9v10h16V9H4zm2 4h5v4H6v-4z"
                    />
                  </g>
                </svg>
              </div>
              <div
                class="block text-[1.25rem] font-medium leading-[1.5]  tracking-[0.031em] lg:text-[1.75rem] lg:leading-[1.3] lg:font-bold lg:tracking-normal underline pl-[1.75rem] lg:pl-[3rem]"
              >
                4th Oct 2022
              </div>
            </div>
            <div
              class="event-info-item"
            >
              <div
                class="event-info-icon text-[1.25rem] lg:text-[2rem]"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M18.364 17.364L12 23.728l-6.364-6.364a9 9 0 1 1 12.728 0zM12 15a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm0-2a2 2 0 1 1 0-4 2 2 0 0 1 0 4z"
                    />
                  </g>
                </svg>
              </div>
              <a
                class="block text-[1.25rem] font-medium leading-[1.5]  tracking-[0.031em] lg:text-[1.75rem] lg:leading-[1.3] lg:font-bold lg:tracking-normal underline pl-[1.75rem] lg:pl-[3rem]"
                href="https://goo.gl/maps/TnWfy922GUNfJZfh7"
                rel="noreferrer"
                target="_blank"
              >
                The Brighton Centre, Brighton, UK
              </a>
            </div>
          </div>
        </div>
        <p
          class="hidden lg:block text-inherit text-[1.25rem] max-w-[880px] mx-auto mt-10"
        >
          We also have a range of fringe events to help search marketers meet, learn and do their job a little bit better. These take place the day before the main brightonSEO conference.
        </p>
      </div>
    </div>
  </div>
</section>
`;

exports[`Hero Home Section renders hero for Home page correctly 1`] = `
<section
  class="relative z-10 overflow-hidden flex items-center py-[6.25rem] md:py-[8.75rem] xl:py-[11.25rem] min-h-[480px]  md:min-h-[600px] lg:min-h-[700px] xl:min-h-[100vh]  text-white bg-primaryLightGradient"
  data-testid="hero-home"
>
  <video
    class="absolute z-[-1]  inset-0  w-full h-full object-cover"
    loop=""
    preload="none"
  >
    <source
      src="https://brightonseo.com/wp-content/themes/brighton-seo/assets/images/bseo-into-video-longer-intro.mp4"
      type="video/mp4"
    />
  </video>
  <span
    class="hero-overlay absolute inset-0 z-[1]"
  />
  <div
    class="absolute inset-0 z-[1]"
  >
    <span
      style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
    >
      <img
        alt="hero-bg-vector-1"
        data-nimg="fill"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%; object-fit: cover;"
      />
      <noscript />
    </span>
  </div>
  <div
    class="container"
  >
    <div
      class="xl:max-w-[1145px] mx-auto md:text-center"
    >
      <div
        class="relative z-50"
      >
        <div
          class="block text-[1.25rem] font-medium leading-[1.5]  tracking-[0.031em] lg:text-[1.75rem] lg:leading-[1.3] lg:font-bold lg:tracking-normal mb-2 lg:mb-4"
        >
          Largest Conference
        </div>
        <h1
          class="text-[2rem] leading-[1.2] font-semibold text-white md:text-[3rem] lg:text-[5rem] lg:font-bold"
        >
          Where search marketers go to hone their talents.
        </h1>
        <div
          class="mt-4"
        >
          <div
            class="inline-flex items-center flex-wrap gap-[.5rem_2.5rem]"
          >
            <div
              class="event-info-item"
            >
              <div
                class="event-info-icon text-[1.25rem] lg:text-[2rem]"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M17 3h4a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h4V1h2v2h6V1h2v2zM4 9v10h16V9H4zm2 4h5v4H6v-4z"
                    />
                  </g>
                </svg>
              </div>
              <div
                class="block text-[1.25rem] font-medium leading-[1.5]  tracking-[0.031em] lg:text-[1.75rem] lg:leading-[1.3] lg:font-bold lg:tracking-normal underline pl-[1.75rem] lg:pl-[3rem]"
              >
                6th & 7th Oct 2022
              </div>
            </div>
            <div
              class="event-info-item"
            >
              <div
                class="event-info-icon text-[1.25rem] lg:text-[2rem]"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M18.364 17.364L12 23.728l-6.364-6.364a9 9 0 1 1 12.728 0zM12 15a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm0-2a2 2 0 1 1 0-4 2 2 0 0 1 0 4z"
                    />
                  </g>
                </svg>
              </div>
              <a
                class="block text-[1.25rem] font-medium leading-[1.5]  tracking-[0.031em] lg:text-[1.75rem] lg:leading-[1.3] lg:font-bold lg:tracking-normal underline pl-[1.75rem] lg:pl-[3rem]"
                href="https://goo.gl/maps/TnWfy922GUNfJZfh7"
                rel="noreferrer"
                target="_blank"
              >
                The Brighton Centre, Brighton, UK
              </a>
            </div>
          </div>
        </div>
        <div
          class="mt-10 hidden lg:block"
        >
          <div
            class="inline-flex items-center flex-wrap  gap-[2.5rem]"
          >
            <div
              class=" info-count-circle theme-1 relative grid place-items-center w-[140px] h-[140px]"
            >
              <div>
                <span
                  class="absolute text-[8.75rem] inset-0 w-full h-full z-[-1]"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 140 140"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <mask
                      fill="white"
                      id="path-1-inside-1_2689_10361"
                    >
                      <path
                        d="M68.257 1.77226C68.2323 0.806078 68.9958 0.000530985 69.9623 4.61967e-06C82.1244 -0.00661902 94.0897 3.15618 104.673 9.19033C115.763 15.5137 124.912 24.7494 131.132 35.8982C137.351 47.047 140.403 59.6843 139.957 72.4427C139.532 84.6176 135.938 96.4603 129.543 106.806C129.035 107.628 127.948 107.854 127.139 107.326V107.326C126.33 106.797 126.105 105.714 126.612 104.891C132.658 95.0804 136.057 83.8575 136.459 72.3206C136.883 60.2001 133.983 48.1947 128.075 37.6033C122.167 27.012 113.474 18.238 102.939 12.2308C92.9106 6.51284 81.5756 3.5089 70.0516 3.50001C69.0851 3.49927 68.2816 2.73844 68.257 1.77226V1.77226Z"
                      />
                    </mask>
                    <path
                      d="M68.257 1.77226C68.2323 0.806078 68.9958 0.000530985 69.9623 4.61967e-06C82.1244 -0.00661902 94.0897 3.15618 104.673 9.19033C115.763 15.5137 124.912 24.7494 131.132 35.8982C137.351 47.047 140.403 59.6843 139.957 72.4427C139.532 84.6176 135.938 96.4603 129.543 106.806C129.035 107.628 127.948 107.854 127.139 107.326V107.326C126.33 106.797 126.105 105.714 126.612 104.891C132.658 95.0804 136.057 83.8575 136.459 72.3206C136.883 60.2001 133.983 48.1947 128.075 37.6033C122.167 27.012 113.474 18.238 102.939 12.2308C92.9106 6.51284 81.5756 3.5089 70.0516 3.50001C69.0851 3.49927 68.2816 2.73844 68.257 1.77226V1.77226Z"
                      mask="url(#path-1-inside-1_2689_10361)"
                      stroke="currentColor"
                      stroke-linejoin="round"
                      stroke-width="8"
                    />
                    <mask
                      fill="white"
                      id="path-2-inside-2_2689_10361"
                    >
                      <path
                        d="M123.664 112.17C124.424 112.767 124.557 113.869 123.941 114.613C114.909 125.534 102.765 133.467 89.1057 137.342C74.8844 141.377 59.7509 140.806 45.874 135.711C31.9972 130.616 20.0896 121.259 11.8577 108.98C3.95106 97.1871 -0.174618 83.2802 0.00564409 69.1103C0.0179383 68.1439 0.83272 67.3902 1.79853 67.4267V67.4267C2.76434 67.4631 3.51533 68.2759 3.50431 69.2423C3.35112 82.6735 7.26978 95.852 14.7648 107.031C22.5851 118.696 33.8974 127.585 47.0803 132.425C60.2633 137.266 74.6402 137.808 88.1504 133.975C101.099 130.302 112.614 122.79 121.188 112.45C121.805 111.706 122.904 111.573 123.664 112.17V112.17Z"
                      />
                    </mask>
                    <path
                      d="M123.664 112.17C124.424 112.767 124.557 113.869 123.941 114.613C114.909 125.534 102.765 133.467 89.1057 137.342C74.8844 141.377 59.7509 140.806 45.874 135.711C31.9972 130.616 20.0896 121.259 11.8577 108.98C3.95106 97.1871 -0.174618 83.2802 0.00564409 69.1103C0.0179383 68.1439 0.83272 67.3902 1.79853 67.4267V67.4267C2.76434 67.4631 3.51533 68.2759 3.50431 69.2423C3.35112 82.6735 7.26978 95.852 14.7648 107.031C22.5851 118.696 33.8974 127.585 47.0803 132.425C60.2633 137.266 74.6402 137.808 88.1504 133.975C101.099 130.302 112.614 122.79 121.188 112.45C121.805 111.706 122.904 111.573 123.664 112.17V112.17Z"
                      mask="url(#path-2-inside-2_2689_10361)"
                      stroke="currentColor"
                      stroke-linejoin="round"
                      stroke-width="8"
                    />
                    <mask
                      fill="white"
                      id="path-3-inside-3_2689_10361"
                    >
                      <path
                        d="M2.25815 61.6871C1.29884 61.5694 0.614381 60.6957 0.756034 59.7396C2.98484 44.6967 10.0561 30.7705 20.9222 20.0863C31.7884 9.40219 45.8319 2.56711 60.9104 0.592644C61.8687 0.467156 62.7307 1.16628 62.8322 2.12743V2.12743C62.9338 3.08858 62.2362 3.94769 61.2781 4.07443C46.9865 5.965 33.6781 12.4526 23.3761 22.582C13.0741 32.7115 6.36276 45.9084 4.23112 60.1661C4.08821 61.1219 3.21745 61.8048 2.25815 61.6871V61.6871Z"
                      />
                    </mask>
                    <path
                      d="M2.25815 61.6871C1.29884 61.5694 0.614381 60.6957 0.756034 59.7396C2.98484 44.6967 10.0561 30.7705 20.9222 20.0863C31.7884 9.40219 45.8319 2.56711 60.9104 0.592644C61.8687 0.467156 62.7307 1.16628 62.8322 2.12743V2.12743C62.9338 3.08858 62.2362 3.94769 61.2781 4.07443C46.9865 5.965 33.6781 12.4526 23.3761 22.582C13.0741 32.7115 6.36276 45.9084 4.23112 60.1661C4.08821 61.1219 3.21745 61.8048 2.25815 61.6871V61.6871Z"
                      mask="url(#path-3-inside-3_2689_10361)"
                      stroke="currentColor"
                      stroke-linejoin="round"
                      stroke-width="8"
                    />
                  </svg>
                </span>
                <div
                  class="text-[3rem] font-bold leading-[1] inline-flex items-center"
                >
                  <span>
                    22
                  </span>
                  <span
                    class="text-[2rem] leading-[1] block relative top-[-3px]"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 12 16"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 9H7v5H5V9H0V7h5V2h2v5h5v2z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="text-[1.25rem] leading-[1] tracking-[0.031em] mt-1"
                >
                  Speakers
                </div>
              </div>
            </div>
            <div
              class=" info-count-circle theme-2 relative grid place-items-center w-[140px] h-[140px]"
            >
              <div>
                <span
                  class="absolute text-[8.75rem] inset-0 w-full h-full z-[-1]"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 140 140"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <mask
                      fill="white"
                      id="path-1-inside-1_2689_10361"
                    >
                      <path
                        d="M68.257 1.77226C68.2323 0.806078 68.9958 0.000530985 69.9623 4.61967e-06C82.1244 -0.00661902 94.0897 3.15618 104.673 9.19033C115.763 15.5137 124.912 24.7494 131.132 35.8982C137.351 47.047 140.403 59.6843 139.957 72.4427C139.532 84.6176 135.938 96.4603 129.543 106.806C129.035 107.628 127.948 107.854 127.139 107.326V107.326C126.33 106.797 126.105 105.714 126.612 104.891C132.658 95.0804 136.057 83.8575 136.459 72.3206C136.883 60.2001 133.983 48.1947 128.075 37.6033C122.167 27.012 113.474 18.238 102.939 12.2308C92.9106 6.51284 81.5756 3.5089 70.0516 3.50001C69.0851 3.49927 68.2816 2.73844 68.257 1.77226V1.77226Z"
                      />
                    </mask>
                    <path
                      d="M68.257 1.77226C68.2323 0.806078 68.9958 0.000530985 69.9623 4.61967e-06C82.1244 -0.00661902 94.0897 3.15618 104.673 9.19033C115.763 15.5137 124.912 24.7494 131.132 35.8982C137.351 47.047 140.403 59.6843 139.957 72.4427C139.532 84.6176 135.938 96.4603 129.543 106.806C129.035 107.628 127.948 107.854 127.139 107.326V107.326C126.33 106.797 126.105 105.714 126.612 104.891C132.658 95.0804 136.057 83.8575 136.459 72.3206C136.883 60.2001 133.983 48.1947 128.075 37.6033C122.167 27.012 113.474 18.238 102.939 12.2308C92.9106 6.51284 81.5756 3.5089 70.0516 3.50001C69.0851 3.49927 68.2816 2.73844 68.257 1.77226V1.77226Z"
                      mask="url(#path-1-inside-1_2689_10361)"
                      stroke="currentColor"
                      stroke-linejoin="round"
                      stroke-width="8"
                    />
                    <mask
                      fill="white"
                      id="path-2-inside-2_2689_10361"
                    >
                      <path
                        d="M123.664 112.17C124.424 112.767 124.557 113.869 123.941 114.613C114.909 125.534 102.765 133.467 89.1057 137.342C74.8844 141.377 59.7509 140.806 45.874 135.711C31.9972 130.616 20.0896 121.259 11.8577 108.98C3.95106 97.1871 -0.174618 83.2802 0.00564409 69.1103C0.0179383 68.1439 0.83272 67.3902 1.79853 67.4267V67.4267C2.76434 67.4631 3.51533 68.2759 3.50431 69.2423C3.35112 82.6735 7.26978 95.852 14.7648 107.031C22.5851 118.696 33.8974 127.585 47.0803 132.425C60.2633 137.266 74.6402 137.808 88.1504 133.975C101.099 130.302 112.614 122.79 121.188 112.45C121.805 111.706 122.904 111.573 123.664 112.17V112.17Z"
                      />
                    </mask>
                    <path
                      d="M123.664 112.17C124.424 112.767 124.557 113.869 123.941 114.613C114.909 125.534 102.765 133.467 89.1057 137.342C74.8844 141.377 59.7509 140.806 45.874 135.711C31.9972 130.616 20.0896 121.259 11.8577 108.98C3.95106 97.1871 -0.174618 83.2802 0.00564409 69.1103C0.0179383 68.1439 0.83272 67.3902 1.79853 67.4267V67.4267C2.76434 67.4631 3.51533 68.2759 3.50431 69.2423C3.35112 82.6735 7.26978 95.852 14.7648 107.031C22.5851 118.696 33.8974 127.585 47.0803 132.425C60.2633 137.266 74.6402 137.808 88.1504 133.975C101.099 130.302 112.614 122.79 121.188 112.45C121.805 111.706 122.904 111.573 123.664 112.17V112.17Z"
                      mask="url(#path-2-inside-2_2689_10361)"
                      stroke="currentColor"
                      stroke-linejoin="round"
                      stroke-width="8"
                    />
                    <mask
                      fill="white"
                      id="path-3-inside-3_2689_10361"
                    >
                      <path
                        d="M2.25815 61.6871C1.29884 61.5694 0.614381 60.6957 0.756034 59.7396C2.98484 44.6967 10.0561 30.7705 20.9222 20.0863C31.7884 9.40219 45.8319 2.56711 60.9104 0.592644C61.8687 0.467156 62.7307 1.16628 62.8322 2.12743V2.12743C62.9338 3.08858 62.2362 3.94769 61.2781 4.07443C46.9865 5.965 33.6781 12.4526 23.3761 22.582C13.0741 32.7115 6.36276 45.9084 4.23112 60.1661C4.08821 61.1219 3.21745 61.8048 2.25815 61.6871V61.6871Z"
                      />
                    </mask>
                    <path
                      d="M2.25815 61.6871C1.29884 61.5694 0.614381 60.6957 0.756034 59.7396C2.98484 44.6967 10.0561 30.7705 20.9222 20.0863C31.7884 9.40219 45.8319 2.56711 60.9104 0.592644C61.8687 0.467156 62.7307 1.16628 62.8322 2.12743V2.12743C62.9338 3.08858 62.2362 3.94769 61.2781 4.07443C46.9865 5.965 33.6781 12.4526 23.3761 22.582C13.0741 32.7115 6.36276 45.9084 4.23112 60.1661C4.08821 61.1219 3.21745 61.8048 2.25815 61.6871V61.6871Z"
                      mask="url(#path-3-inside-3_2689_10361)"
                      stroke="currentColor"
                      stroke-linejoin="round"
                      stroke-width="8"
                    />
                  </svg>
                </span>
                <div
                  class="text-[3rem] font-bold leading-[1] inline-flex items-center"
                >
                  <span>
                    40
                  </span>
                  <span
                    class="text-[2rem] leading-[1] block relative top-[-3px]"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 12 16"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 9H7v5H5V9H0V7h5V2h2v5h5v2z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="text-[1.25rem] leading-[1] tracking-[0.031em] mt-1"
                >
                  Courses
                </div>
              </div>
            </div>
            <div
              class=" info-count-circle theme-3 relative grid place-items-center w-[140px] h-[140px]"
            >
              <div>
                <span
                  class="absolute text-[8.75rem] inset-0 w-full h-full z-[-1]"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 140 140"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <mask
                      fill="white"
                      id="path-1-inside-1_2689_10361"
                    >
                      <path
                        d="M68.257 1.77226C68.2323 0.806078 68.9958 0.000530985 69.9623 4.61967e-06C82.1244 -0.00661902 94.0897 3.15618 104.673 9.19033C115.763 15.5137 124.912 24.7494 131.132 35.8982C137.351 47.047 140.403 59.6843 139.957 72.4427C139.532 84.6176 135.938 96.4603 129.543 106.806C129.035 107.628 127.948 107.854 127.139 107.326V107.326C126.33 106.797 126.105 105.714 126.612 104.891C132.658 95.0804 136.057 83.8575 136.459 72.3206C136.883 60.2001 133.983 48.1947 128.075 37.6033C122.167 27.012 113.474 18.238 102.939 12.2308C92.9106 6.51284 81.5756 3.5089 70.0516 3.50001C69.0851 3.49927 68.2816 2.73844 68.257 1.77226V1.77226Z"
                      />
                    </mask>
                    <path
                      d="M68.257 1.77226C68.2323 0.806078 68.9958 0.000530985 69.9623 4.61967e-06C82.1244 -0.00661902 94.0897 3.15618 104.673 9.19033C115.763 15.5137 124.912 24.7494 131.132 35.8982C137.351 47.047 140.403 59.6843 139.957 72.4427C139.532 84.6176 135.938 96.4603 129.543 106.806C129.035 107.628 127.948 107.854 127.139 107.326V107.326C126.33 106.797 126.105 105.714 126.612 104.891C132.658 95.0804 136.057 83.8575 136.459 72.3206C136.883 60.2001 133.983 48.1947 128.075 37.6033C122.167 27.012 113.474 18.238 102.939 12.2308C92.9106 6.51284 81.5756 3.5089 70.0516 3.50001C69.0851 3.49927 68.2816 2.73844 68.257 1.77226V1.77226Z"
                      mask="url(#path-1-inside-1_2689_10361)"
                      stroke="currentColor"
                      stroke-linejoin="round"
                      stroke-width="8"
                    />
                    <mask
                      fill="white"
                      id="path-2-inside-2_2689_10361"
                    >
                      <path
                        d="M123.664 112.17C124.424 112.767 124.557 113.869 123.941 114.613C114.909 125.534 102.765 133.467 89.1057 137.342C74.8844 141.377 59.7509 140.806 45.874 135.711C31.9972 130.616 20.0896 121.259 11.8577 108.98C3.95106 97.1871 -0.174618 83.2802 0.00564409 69.1103C0.0179383 68.1439 0.83272 67.3902 1.79853 67.4267V67.4267C2.76434 67.4631 3.51533 68.2759 3.50431 69.2423C3.35112 82.6735 7.26978 95.852 14.7648 107.031C22.5851 118.696 33.8974 127.585 47.0803 132.425C60.2633 137.266 74.6402 137.808 88.1504 133.975C101.099 130.302 112.614 122.79 121.188 112.45C121.805 111.706 122.904 111.573 123.664 112.17V112.17Z"
                      />
                    </mask>
                    <path
                      d="M123.664 112.17C124.424 112.767 124.557 113.869 123.941 114.613C114.909 125.534 102.765 133.467 89.1057 137.342C74.8844 141.377 59.7509 140.806 45.874 135.711C31.9972 130.616 20.0896 121.259 11.8577 108.98C3.95106 97.1871 -0.174618 83.2802 0.00564409 69.1103C0.0179383 68.1439 0.83272 67.3902 1.79853 67.4267V67.4267C2.76434 67.4631 3.51533 68.2759 3.50431 69.2423C3.35112 82.6735 7.26978 95.852 14.7648 107.031C22.5851 118.696 33.8974 127.585 47.0803 132.425C60.2633 137.266 74.6402 137.808 88.1504 133.975C101.099 130.302 112.614 122.79 121.188 112.45C121.805 111.706 122.904 111.573 123.664 112.17V112.17Z"
                      mask="url(#path-2-inside-2_2689_10361)"
                      stroke="currentColor"
                      stroke-linejoin="round"
                      stroke-width="8"
                    />
                    <mask
                      fill="white"
                      id="path-3-inside-3_2689_10361"
                    >
                      <path
                        d="M2.25815 61.6871C1.29884 61.5694 0.614381 60.6957 0.756034 59.7396C2.98484 44.6967 10.0561 30.7705 20.9222 20.0863C31.7884 9.40219 45.8319 2.56711 60.9104 0.592644C61.8687 0.467156 62.7307 1.16628 62.8322 2.12743V2.12743C62.9338 3.08858 62.2362 3.94769 61.2781 4.07443C46.9865 5.965 33.6781 12.4526 23.3761 22.582C13.0741 32.7115 6.36276 45.9084 4.23112 60.1661C4.08821 61.1219 3.21745 61.8048 2.25815 61.6871V61.6871Z"
                      />
                    </mask>
                    <path
                      d="M2.25815 61.6871C1.29884 61.5694 0.614381 60.6957 0.756034 59.7396C2.98484 44.6967 10.0561 30.7705 20.9222 20.0863C31.7884 9.40219 45.8319 2.56711 60.9104 0.592644C61.8687 0.467156 62.7307 1.16628 62.8322 2.12743V2.12743C62.9338 3.08858 62.2362 3.94769 61.2781 4.07443C46.9865 5.965 33.6781 12.4526 23.3761 22.582C13.0741 32.7115 6.36276 45.9084 4.23112 60.1661C4.08821 61.1219 3.21745 61.8048 2.25815 61.6871V61.6871Z"
                      mask="url(#path-3-inside-3_2689_10361)"
                      stroke="currentColor"
                      stroke-linejoin="round"
                      stroke-width="8"
                    />
                  </svg>
                </span>
                <div
                  class="text-[3rem] font-bold leading-[1] inline-flex items-center"
                >
                  <span>
                    33
                  </span>
                  <span
                    class="text-[2rem] leading-[1] block relative top-[-3px]"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 12 16"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 9H7v5H5V9H0V7h5V2h2v5h5v2z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="text-[1.25rem] leading-[1] tracking-[0.031em] mt-1"
                >
                  Sessions
                </div>
              </div>
            </div>
            <div
              class=" info-count-circle theme-2 relative grid place-items-center w-[140px] h-[140px]"
            >
              <div>
                <span
                  class="absolute text-[8.75rem] inset-0 w-full h-full z-[-1]"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 140 140"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <mask
                      fill="white"
                      id="path-1-inside-1_2689_10361"
                    >
                      <path
                        d="M68.257 1.77226C68.2323 0.806078 68.9958 0.000530985 69.9623 4.61967e-06C82.1244 -0.00661902 94.0897 3.15618 104.673 9.19033C115.763 15.5137 124.912 24.7494 131.132 35.8982C137.351 47.047 140.403 59.6843 139.957 72.4427C139.532 84.6176 135.938 96.4603 129.543 106.806C129.035 107.628 127.948 107.854 127.139 107.326V107.326C126.33 106.797 126.105 105.714 126.612 104.891C132.658 95.0804 136.057 83.8575 136.459 72.3206C136.883 60.2001 133.983 48.1947 128.075 37.6033C122.167 27.012 113.474 18.238 102.939 12.2308C92.9106 6.51284 81.5756 3.5089 70.0516 3.50001C69.0851 3.49927 68.2816 2.73844 68.257 1.77226V1.77226Z"
                      />
                    </mask>
                    <path
                      d="M68.257 1.77226C68.2323 0.806078 68.9958 0.000530985 69.9623 4.61967e-06C82.1244 -0.00661902 94.0897 3.15618 104.673 9.19033C115.763 15.5137 124.912 24.7494 131.132 35.8982C137.351 47.047 140.403 59.6843 139.957 72.4427C139.532 84.6176 135.938 96.4603 129.543 106.806C129.035 107.628 127.948 107.854 127.139 107.326V107.326C126.33 106.797 126.105 105.714 126.612 104.891C132.658 95.0804 136.057 83.8575 136.459 72.3206C136.883 60.2001 133.983 48.1947 128.075 37.6033C122.167 27.012 113.474 18.238 102.939 12.2308C92.9106 6.51284 81.5756 3.5089 70.0516 3.50001C69.0851 3.49927 68.2816 2.73844 68.257 1.77226V1.77226Z"
                      mask="url(#path-1-inside-1_2689_10361)"
                      stroke="currentColor"
                      stroke-linejoin="round"
                      stroke-width="8"
                    />
                    <mask
                      fill="white"
                      id="path-2-inside-2_2689_10361"
                    >
                      <path
                        d="M123.664 112.17C124.424 112.767 124.557 113.869 123.941 114.613C114.909 125.534 102.765 133.467 89.1057 137.342C74.8844 141.377 59.7509 140.806 45.874 135.711C31.9972 130.616 20.0896 121.259 11.8577 108.98C3.95106 97.1871 -0.174618 83.2802 0.00564409 69.1103C0.0179383 68.1439 0.83272 67.3902 1.79853 67.4267V67.4267C2.76434 67.4631 3.51533 68.2759 3.50431 69.2423C3.35112 82.6735 7.26978 95.852 14.7648 107.031C22.5851 118.696 33.8974 127.585 47.0803 132.425C60.2633 137.266 74.6402 137.808 88.1504 133.975C101.099 130.302 112.614 122.79 121.188 112.45C121.805 111.706 122.904 111.573 123.664 112.17V112.17Z"
                      />
                    </mask>
                    <path
                      d="M123.664 112.17C124.424 112.767 124.557 113.869 123.941 114.613C114.909 125.534 102.765 133.467 89.1057 137.342C74.8844 141.377 59.7509 140.806 45.874 135.711C31.9972 130.616 20.0896 121.259 11.8577 108.98C3.95106 97.1871 -0.174618 83.2802 0.00564409 69.1103C0.0179383 68.1439 0.83272 67.3902 1.79853 67.4267V67.4267C2.76434 67.4631 3.51533 68.2759 3.50431 69.2423C3.35112 82.6735 7.26978 95.852 14.7648 107.031C22.5851 118.696 33.8974 127.585 47.0803 132.425C60.2633 137.266 74.6402 137.808 88.1504 133.975C101.099 130.302 112.614 122.79 121.188 112.45C121.805 111.706 122.904 111.573 123.664 112.17V112.17Z"
                      mask="url(#path-2-inside-2_2689_10361)"
                      stroke="currentColor"
                      stroke-linejoin="round"
                      stroke-width="8"
                    />
                    <mask
                      fill="white"
                      id="path-3-inside-3_2689_10361"
                    >
                      <path
                        d="M2.25815 61.6871C1.29884 61.5694 0.614381 60.6957 0.756034 59.7396C2.98484 44.6967 10.0561 30.7705 20.9222 20.0863C31.7884 9.40219 45.8319 2.56711 60.9104 0.592644C61.8687 0.467156 62.7307 1.16628 62.8322 2.12743V2.12743C62.9338 3.08858 62.2362 3.94769 61.2781 4.07443C46.9865 5.965 33.6781 12.4526 23.3761 22.582C13.0741 32.7115 6.36276 45.9084 4.23112 60.1661C4.08821 61.1219 3.21745 61.8048 2.25815 61.6871V61.6871Z"
                      />
                    </mask>
                    <path
                      d="M2.25815 61.6871C1.29884 61.5694 0.614381 60.6957 0.756034 59.7396C2.98484 44.6967 10.0561 30.7705 20.9222 20.0863C31.7884 9.40219 45.8319 2.56711 60.9104 0.592644C61.8687 0.467156 62.7307 1.16628 62.8322 2.12743V2.12743C62.9338 3.08858 62.2362 3.94769 61.2781 4.07443C46.9865 5.965 33.6781 12.4526 23.3761 22.582C13.0741 32.7115 6.36276 45.9084 4.23112 60.1661C4.08821 61.1219 3.21745 61.8048 2.25815 61.6871V61.6871Z"
                      mask="url(#path-3-inside-3_2689_10361)"
                      stroke="currentColor"
                      stroke-linejoin="round"
                      stroke-width="8"
                    />
                  </svg>
                </span>
                <div
                  class="text-[3rem] font-bold leading-[1] inline-flex items-center"
                >
                  <span>
                    03
                  </span>
                </div>
                <div
                  class="text-[1.25rem] leading-[1] tracking-[0.031em] mt-1"
                >
                  Parties
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Hero Home Section renders hero for Training page correctly 1`] = `
<section
  class="relative z-10 overflow-hidden flex items-center py-[6.25rem] md:py-[8.75rem] xl:py-[11.25rem] min-h-[480px]  md:min-h-[600px] lg:min-h-[700px] xl:min-h-[100vh]  text-white bg-primaryLightGradient"
  data-testid="hero-home"
>
  <video
    class="absolute z-[-1]  inset-0  w-full h-full object-cover"
    loop=""
    preload="none"
  >
    <source
      src="https://brightonseo.com/wp-content/themes/brighton-seo/assets/images/bseo-into-video-longer-intro.mp4"
      type="video/mp4"
    />
  </video>
  <span
    class="hero-overlay absolute inset-0 z-[1]"
  />
  <div
    class="container"
  >
    <div
      class="xl:max-w-[1145px] mx-auto md:text-center"
    >
      <div
        class="relative z-50"
      >
        <h1
          class="text-[2rem] leading-[1.2] font-semibold text-white md:text-[3rem] lg:text-[5rem] lg:font-bold"
        >
          Book for an In Depth Training Course
        </h1>
        <p
          class="hidden lg:block text-inherit text-[1.25rem] max-w-[880px] mx-auto mt-10"
        >
          As well as running one of the world’s most popular search marketing conference, we also organise practical, hands-on and in-depth Analytics, PPC, SEO training courses and workshops so you can up-skill in a specific area of Search Marketing. 
        </p>
        <div
          class="mt-8 lg:mt-12"
        >
          <div
            class="text-[1.25rem] font-medium lg:text-[1.75rem] mb-3 lg:mb-4"
          >
            expert training from anywhere in the world via
          </div>
          <div>
            <span
              style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
            >
              <span
                style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
              >
                <img
                  alt=""
                  aria-hidden="true"
                  src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27453%27%20height=%2788%27/%3e"
                  style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                />
              </span>
              <img
                alt="expert training from anywhere in the world via"
                class="rounded-[.625rem]"
                data-nimg="intrinsic"
                decoding="async"
                src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
              />
              <noscript />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;
